@@ -10,7 +10,7 @@
 .\" the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.
 .\"
-.TH PGREP "1" "2023-01-16" "procps-ng" "User Commands"
+.TH PGREP "1" "2023-10-04" "procps-ng" "User Commands"
 .SH NAME
 pgrep, pkill, pidwait \- look up, signal, or wait for processes based on name and other attributes
 .SH SYNOPSIS
@@ -204,6 +204,10 @@ be sent.
 \fB\-\-cgroup \fIname\fP,...
 Match on provided control group (cgroup) v2 name. See
 .BR cgroups (8)
+.TP
+\fB\-\-env \fIname\fR[\fI=value\fR],...
+Match on process that have these environent variables. If the \fI=value\fR
+parameter is not defined then only the variable name is matched.
 .TP
 \fB\-\-ns \fIpid\fP
 Match processes that belong to the same namespaces. Required to run as
